GSON-based Implementation of azure-json (#29686)
GSON-based Implementation of azure-json